--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,9 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
+    buildFeatures{
+        viewBinding true
+    }
     defaultConfig {
         applicationId "com.mkrlabs.chatmes"
         minSdkVersion 21
